// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceTableRowExpandableTable component test renders as expected 1`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <th
        className="bx--table-header-index-0"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Compliance Type
        </span>
      </th>
      <th
        className="bx--table-header-index-1"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          API groups
        </span>
      </th>
      <th
        className="bx--table-header-index-2"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Resources
        </span>
      </th>
      <th
        className="bx--table-header-index-3"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Verbs
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <td
        className={undefined}
      >
        -
      </td>
      <td
        className={undefined}
      >
        -
      </td>
      <td
        className={undefined}
      >
        -
      </td>
      <td
        className={undefined}
      >
        -
      </td>
      <td
        className={undefined}
      >
        -
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ResourceTableRowExpandableTable component test renders as expected 2`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    />
  </thead>
  <tbody
    className={undefined}
  />
</table>
`;

exports[`ResourceTableRowExpandableTable component test renders as expected 3`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    />
  </thead>
  <tbody
    className={undefined}
  />
</table>
`;

exports[`ResourceTableRowExpandableTable component test renders as expected 4`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <th
        className="bx--table-header-index-0"
        scope="col"
      />
      <th
        className="bx--table-header-index-1"
        scope="col"
      />
      <th
        className="bx--table-header-index-2"
        scope="col"
      />
    </tr>
  </thead>
  <tbody
    className={undefined}
  />
</table>
`;

exports[`ResourceTableRowExpandableTable component test renders as expected 5`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <th
        className="bx--table-header-index-0"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Compliance Type
        </span>
      </th>
      <th
        className="bx--table-header-index-1"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          API groups
        </span>
      </th>
      <th
        className="bx--table-header-index-2"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Resources
        </span>
      </th>
      <th
        className="bx--table-header-index-3"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Verbs
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <td
        className={undefined}
      >
        -
      </td>
      <td
        className={undefined}
      >
        imagemanifestvulns exist and should be deleted: [sha256.4109631e69d1d562f014dd49d5166f1c18b4093f4f311275236b94b21c0041c0] in namespace calamari; [sha256.64320fbf95d968fc6b9863581a92d373bc75f563a13ae1c727af37450579f61a] in namespace openshift-cluster-version; [sha256.7ac7819e1523911399b798309025935a9968b277d86d50e5255465d6592c0266] in namespace default; [sha256.573e9e0a1198da4e29eb9a8d7757f7afb7ad085b0771bc6aa03ef96dedc5b743, sha256.a56d40244a544693ae18178a0be8af76602b89abe146a43613eaeac84a27494e, sha256.b25126b194016e84c04a64a0ad5094a90555d70b4761d38525e4aed21d372820] in namespace multicluster-endpoint
      </td>
      <td
        className={undefined}
      >
        K8s has a must \`not\` have object
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ResourceTableRowExpandableTable component test renders as expected 6`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <th
        className="bx--table-header-index-0"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Compliance Type
        </span>
      </th>
      <th
        className="bx--table-header-index-1"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          API groups
        </span>
      </th>
      <th
        className="bx--table-header-index-2"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Resources
        </span>
      </th>
      <th
        className="bx--table-header-index-3"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Verbs
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <td
        className={undefined}
      >
        testItem2
      </td>
      <td
        className={undefined}
      >
        imagemanifestvulns exist and should be deleted: [sha256.4109631e69d1d562f014dd49d5166f1c18b4093f4f311275236b94b21c0041c0] in namespace calamari; [sha256.64320fbf95d968fc6b9863581a92d373bc75f563a13ae1c727af37450579f61a] in namespace openshift-cluster-version; [sha256.7ac7819e1523911399b798309025935a9968b277d86d50e5255465d6592c0266] in namespace default; [sha256.573e9e0a1198da4e29eb9a8d7757f7afb7ad085b0771bc6aa03ef96dedc5b743, sha256.a56d40244a544693ae18178a0be8af76602b89abe146a43613eaeac84a27494e, sha256.b25126b194016e84c04a64a0ad5094a90555d70b4761d38525e4aed21d372820] in namespace multicluster-endpoint
      </td>
      <td
        className={undefined}
      >
        K8s has a must \`not\` have object
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ResourceTableRowExpandableTable component test renders as expected 7`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <th
        className="bx--table-header-index-0"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Compliance Type
        </span>
      </th>
      <th
        className="bx--table-header-index-1"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          API groups
        </span>
      </th>
      <th
        className="bx--table-header-index-2"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Resources
        </span>
      </th>
      <th
        className="bx--table-header-index-3"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Verbs
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    className={undefined}
  />
</table>
`;

exports[`ResourceTableRowExpandableTable component test renders as expected 8`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <th
        className="bx--table-header-index-0"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Compliance Type
        </span>
      </th>
      <th
        className="bx--table-header-index-1"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          API groups
        </span>
      </th>
      <th
        className="bx--table-header-index-2"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Resources
        </span>
      </th>
      <th
        className="bx--table-header-index-3"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Verbs
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <td
        className="bx--table-subRowsArray-subRow-index-0"
      >
        testItem2
      </td>
      <td
        className="bx--table-subRowsArray-subRow-index-1"
      >
        imagemanifestvulns exist and should be deleted: [sha256.4109631e69d1d562f014dd49d5166f1c18b4093f4f311275236b94b21c0041c0] in namespace calamari; [sha256.64320fbf95d968fc6b9863581a92d373bc75f563a13ae1c727af37450579f61a] in namespace openshift-cluster-version; [sha256.7ac7819e1523911399b798309025935a9968b277d86d50e5255465d6592c0266] in namespace default; [sha256.573e9e0a1198da4e29eb9a8d7757f7afb7ad085b0771bc6aa03ef96dedc5b743, sha256.a56d40244a544693ae18178a0be8af76602b89abe146a43613eaeac84a27494e, sha256.b25126b194016e84c04a64a0ad5094a90555d70b4761d38525e4aed21d372820] in namespace multicluster-endpoint
      </td>
      <td
        className="bx--table-subRowsArray-subRow-index-2"
      >
        K8s has a must \`not\` have object
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ResourceTableRowExpandableTable component test renders as expected 9`] = `
<table
  className="bx--data-table-v2 resource-table-expandable bx--data-table-v2--zebra"
>
  <thead
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <th
        className="bx--table-header-index-0"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Compliance Type
        </span>
      </th>
      <th
        className="bx--table-header-index-1"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          API groups
        </span>
      </th>
      <th
        className="bx--table-header-index-2"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Resources
        </span>
      </th>
      <th
        className="bx--table-header-index-3"
        scope="col"
      >
        <span
          className="bx--table-header-label"
        >
          Verbs
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    className={undefined}
  >
    <tr
      className={undefined}
    >
      <td
        className={undefined}
      >
        -
      </td>
      <td
        className={undefined}
      >
        -
      </td>
      <td
        className={undefined}
      >
        -
      </td>
    </tr>
  </tbody>
</table>
`;
